# ChmlFrp-NodeSpeedTest

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  release.yml
.trae/specs/add-auto-update-and-tunnel-speed-test/: checklist.md  spec.md  tasks.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs  utils.rs
src-tauri/src/commands/: background.rs  download.rs  file_server.rs  frpc.rs  http.rs  mod.rs  ping.rs  tcp_speed.rs  tcping.rs
src/components/: Sidebar.tsx  TitleBar.tsx
src/components/App/components/: BackgroundLayer.tsx
src/components/App/hooks/: useAppTheme.ts  useBackground.ts  useUpdateCheck.ts
src/components/App/utils/: toastHelpers.tsx
src/components/dialogs/: BatchSpeedTestDialog.tsx  BatchTestFloatingWidget.tsx  NodeHistoryDialog.tsx  SpeedTestDialog.tsx  UpdateDialog.tsx
src/components/pages/NodeTest/: index.tsx
src/components/pages/Settings/: index.tsx
src/components/pages/Settings/components/: NetworkSection.tsx  (+2 more)
src/components/ui/: accordion.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  item.tsx  progress.tsx  scroll-area.tsx  sonner.tsx  tabs.tsx
src/lib/: settings-utils.ts  sound.ts
src/services/: api.ts  frpcService.ts  speedTestService.ts  testHistoryService.ts  tunnelService.ts  updateService.ts
(+5 files in other folders)
