[package]
name = "chmlfrp-node-recommender"
version = "1.0.0"
description = "ChmlFrp交流社区-节点推荐器"
authors = ["ChmlFrp社区"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[dependencies.tokio]
version = "1.48"
default-features = false
features = ["rt-multi-thread", "macros", "sync", "time"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
